# HomePortal

./: .gitignore  README.md
.github/workflows/: ci.yml
.serena/: project.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: __main__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: assets.py  auth.py  contacts.py  events.py  health.py  links.py  todos.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/migrations/: README  env.py  script.py.mako
backend/app/migrations/versions/: 0001_create_tables.py  0002_local_calendar_fields.py
backend/app/models/: __init__.py  asset_snapshot.py  audit_log.py  common.py  contact.py  event.py  file.py  link.py  todo.py  user.py
backend/app/schemas/: asset.py  auth.py  contact.py  event.py  link.py  todo.py  user.py
backend/app/services/: assets.py  contacts.py  events.py  links.py  todos.py  users.py
backend/tests/: conftest.py  test_events.py  test_health.py  test_links.py
docs/: api.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AppShell.tsx  AssetSummary.tsx  ContactList.tsx  CreateContactForm.tsx  CreateEventForm.tsx  CreateLinkForm.tsx  CreateTodoForm.tsx  EventList.tsx  LinkList.tsx  LoginForm.tsx  LogoutButton.tsx  SearchInput.tsx  TodoList.tsx
frontend/lib/: api.ts  config.ts
frontend/public/: manifest.json
infra/: Caddyfile  docker-compose.yml
(+13 files in other folders)
